--- a/css/kukkoro.css
+++ b/css/kukkoro.css
@@ -1,20 +1,21 @@
 .kukkoro-sidebar {
-  top: 0;
-  right: 0;
+  background-color: rgba(245, 245, 245, 0.4);
+  border-radius: 3px;
   margin-right: 20px;
   margin-top: 20px;
+  max-height: 90vh;
+  overflow-y: scroll;;
   padding: 10px;
-  z-index: 1000001;
   position: fixed;
-  overflow-y: visible;
-  border-right: 1px solid rgb(221, 221, 221);
-  transition: transform 0.2s ease;
+  right: 0;
+  top: 0;
   width: 200px;
+  z-index: 1000001;
 }
 
 .kukkoro-item {
   display: block;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
