--- a/css/kukkoro.css
+++ b/css/kukkoro.css
@@ -1,5 +1,6 @@
 .kukkoro-sidebar {
   background-color: rgba(245, 245, 245, 0.4);
+  border-color: rgb(200, 200, 200);
   border-radius: 3px;
   margin-right: 20px;
   margin-top: 20px;
