--- a/css/kukkoro.css
+++ b/css/kukkoro.css
@@ -3,10 +3,10 @@
   border-color: rgb(200, 200, 200);
   border-radius: 3px;
   margin-right: 20px;
-  margin-top: 20px;
+  margin-top: 50px;
   max-height: 90vh;
-  overflow-y: scroll;;
-  padding: 10px;
+  overflow-y: scroll;
+  padding: 5px 10px 10px;
   position: fixed;
   right: 0;
   top: 0;
@@ -22,7 +22,12 @@
 }
 
 .kukkoro-close-icon {
-  color: #BBBBBB;
-  float: right !important;
+  color: #bbbbbb;
+  text-align: right;
   font-weight: bold;
+  width: 100%;
+}
+
+.kukkoro-close-icon span {
+  cursor: pointer;
 }
